# app/routes/api/v1/auth.go
@@ -2,6 +2,7 @@ package v1
 
 import (
 	controllerV1 "goshaka/app/controllers/v1"
+	"goshaka/app/middlewares"
 
 	"goshaka/app/validator"
 
@@ -12,4 +13,5 @@ func AuthRoute(router fiber.Router) {
 	auth := router.Group("/auth")
 
 	auth.Post("/login", validator.LoginValidator, controllerV1.Login)
+	auth.Get("/my-profile", middlewares.ValidateJWT, controllerV1.MyProfile)
 }
